Configured frontend for Vercel deployment

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <!-- ✅ Corrected path to load from /public/assets -->
     <link rel="icon" type="image/png" href="/assets/messmate.png" />
+    <link rel="prefetch" href="/admin/dashboard" as="document" />
+    <link rel="prefetch" href="/dashboard" as="document" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MessMate</title>
   </head>
